target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.19.4
    app.quarkus.io/commit-id: 38faeedbc2e624b7a105696aa8599bbedd20af18
    app.quarkus.io/vcs-uri: https://github.com/oladapooloyede/brushpass.git
    app.quarkus.io/build-timestamp: 2026-04-06 - 20:40:18 +0000
  labels:
    app.kubernetes.io/name: brushpass
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: quarkus
  name: brushpass
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: brushpass
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.19.4
    app.quarkus.io/commit-id: 38faeedbc2e624b7a105696aa8599bbedd20af18
    app.quarkus.io/vcs-uri: https://github.com/oladapooloyede/brushpass.git
    app.quarkus.io/build-timestamp: 2026-04-06 - 20:40:18 +0000
  labels:
    app.kubernetes.io/name: brushpass
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: quarkus
  name: brushpass
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0
      app.kubernetes.io/name: brushpass
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.quarkus.io/quarkus-version: 3.19.4
        app.quarkus.io/commit-id: 38faeedbc2e624b7a105696aa8599bbedd20af18
        app.quarkus.io/vcs-uri: https://github.com/oladapooloyede/brushpass.git
        app.quarkus.io/build-timestamp: 2026-04-06 - 20:40:18 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/name: brushpass
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: brushpass:1.0.0
          imagePullPolicy: Always
          name: brushpass
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
