target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/oladapooloyede/brushpass.git
    app.quarkus.io/quarkus-version: 3.19.4
    app.quarkus.io/commit-id: b73595db08ecbb2473c4e34c769b670faf8766fa
    app.quarkus.io/vcs-uri: https://github.com/oladapooloyede/brushpass.git
    app.quarkus.io/build-timestamp: 2026-03-20 - 17:17:39 +0000
  labels:
    app.kubernetes.io/name: brushpass
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: brushpass
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: brushpass
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/oladapooloyede/brushpass.git
    app.quarkus.io/quarkus-version: 3.19.4
    app.quarkus.io/commit-id: b73595db08ecbb2473c4e34c769b670faf8766fa
    app.quarkus.io/vcs-uri: https://github.com/oladapooloyede/brushpass.git
    app.quarkus.io/build-timestamp: 2026-03-20 - 17:17:39 +0000
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/name: brushpass
  name: brushpass
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0
      app.kubernetes.io/name: brushpass
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: https://github.com/oladapooloyede/brushpass.git
        app.quarkus.io/quarkus-version: 3.19.4
        app.quarkus.io/commit-id: b73595db08ecbb2473c4e34c769b670faf8766fa
        app.quarkus.io/vcs-uri: https://github.com/oladapooloyede/brushpass.git
        app.quarkus.io/build-timestamp: 2026-03-20 - 17:17:39 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/name: brushpass
    spec:
      containers:
        - image: brushpass:1.0.0
          imagePullPolicy: Always
          name: brushpass
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/oladapooloyede/brushpass.git
    app.quarkus.io/quarkus-version: 3.19.4
    app.quarkus.io/commit-id: b73595db08ecbb2473c4e34c769b670faf8766fa
    app.quarkus.io/vcs-uri: https://github.com/oladapooloyede/brushpass.git
    app.quarkus.io/build-timestamp: 2026-03-20 - 17:17:39 +0000
  labels:
    app.kubernetes.io/name: brushpass
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: brushpass
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: brushpass
